Some minor fixes; created parts-and-repair-template but will remove later in favour of services-template; adjusted content in downloads-content using span tag to prevent breaks in column-wrap.

--- a/src/styles/careers.scss
+++ b/src/styles/careers.scss
@@ -37,11 +37,6 @@ $spacing: 20px;
         flex-direction: row;
       }
       .intro-content {
-        @include media('>=desktop') {
-          // width: calc(75% - 20px);
-          // padding-left: 20px;
-          // padding-right: 20px;
-        }
         .title {
           font-size: 30px;
           color: $prussian-blue;
